--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,22 +1,22 @@
-# FROM public.ecr.aws/nginx/nginx:alpine
-# EXPOSE 80
-# COPY src/index.html /usr/share/nginx/html
+FROM public.ecr.aws/nginx/nginx:alpine
+EXPOSE 80
+COPY src/index.html /usr/share/nginx/html
 
-FROM node:17-alpine as builder
+# FROM node:17-alpine as builder
 
-RUN apk update && apk upgrade
-WORKDIR /home/node/app
+# RUN apk update && apk upgrade
+# WORKDIR /home/node/app
 
-COPY package.json yarn.lock ./
-RUN yarn install
+# COPY package.json yarn.lock ./
+# RUN yarn install
 
-COPY tsconfig.json  ./
-COPY tsconfig.node.json  ./
-COPY *.cjs  ./
-COPY index.html  vite.config.ts ./
-COPY src ./src
+# COPY tsconfig.json  ./
+# COPY tsconfig.node.json  ./
+# COPY *.cjs  ./
+# COPY index.html  vite.config.ts ./
+# COPY src ./src
 
-RUN yarn build
+# RUN yarn build
 
-FROM nginx:alpine
-COPY --from=builder /home/node/app/dist /usr/share/nginx/html
+# FROM nginx:alpine
+# COPY --from=builder /home/node/app/dist /usr/share/nginx/html
